<resources>
    <string name="app_name">AttendanceManagment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="comment">Comment</string>
    <string name="start">Start</string>
    <string name="posting_as">Posting as</string>
    <string name="new_post">New post</string>
    <string name="s_followers">\'s followers</string>
    <string name="is_following">is following</string>
    <string name="post">Post</string>
    <string name="deleted_post">Deleted post</string>
    <string name="commenting_as">Commenting as</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_post">Do you really want to delete this post?</string>
    <string name="deleted_comment">Deleted comment</string>
    <string name="delete_comment">Do you really want to delete this comment?</string>
    <string name="sent_comment">Sent comment</string>
    <string name="camera_image">Camera image</string>
    <string name="profile">Profile</string>
    <string name="follow">Follow</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="unfollow">Unfollow</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="not_a_member_register"><u>Not a member? Register!</u></string>
    <string name="already_a_member_sign_in"><u>Already a member? Sign in!</u></string>
    <string name="show_comments">Show comments</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail address</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="comments">comments</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="posts">posts</string>
    <string name="latest_post">Latest post</string>
    <string name="edit_profile">Edit profile</string>
    <string name="request_timeout">Request timed out. Try again later.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_picture">Update picture</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My profile</string>
    <string name="search_user">Search user</string>
    <string name="search">Search</string>
    <string name="nothing_to_display">There is nothing to display\n\n</string>
    <string name="write_something">Write something...</string>

    <string name="button_create">Create</string>
    <string name="pass">•••••</string>

    <string name="halls">Halls</string>
    <string name="tutors">Tutors</string>
    <string name="students">Students</string>
    <string name="subjects">Subjects</string>

    <string name="hall_name">Hall name</string>
    <string name="hall_des">Hall description</string>
    <string name="hall_high">Hall high</string>

    <string name="tutor_name">Tutor name</string>
    <string name="tutor_email">Tutor email</string>
    <string name="tutor_phone">Tutor phone</string>

    <string name="student_name">Student name</string>
    <string name="student_email">Student email</string>
    <string name="student_phone">Student phone</string>
    <string name="student_age">Student age</string>
    <string name="student_level">Student level</string>
    <string name="student_specialization">Student specialization</string>
    <string name="student_section">Student section</string>

    <string name="subject_name">Subject name</string>


</resources>
