<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:layout_marginLeft="36dp"
    android:layout_marginRight="36dp"
    android:layout_marginTop="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:elevation="2dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tutor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/tutor_name"
                android:inputType="textAutoCorrect"
                android:paddingBottom="16dp"
                android:paddingLeft="44dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16dp">

                <requestFocus />
            </EditText>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/person"
                android:tint="@color/colorTextSecondary" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tutor_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/tutor_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:paddingLeft="44dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/person"
                android:tint="@color/colorTextSecondary" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorDivider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tutor_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/tutor_phone"
                android:inputType="phone"
                android:paddingBottom="16dp"
                android:paddingLeft="44dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16dp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/person"
                android:tint="@color/colorTextSecondary" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/tutor_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingBottom="16dp"
                android:paddingLeft="44dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/colorText"
                android:textSize="16dp" />


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/person"
                android:tint="@color/colorTextSecondary" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/CreateButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:elevation="1dp"
            android:padding="8dp">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/ok"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/check"
                android:tint="#fff"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/not_ok"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_close_black_24dp"
                android:tint="#fff"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/button_create"
                android:textColor="#fff"
                android:textSize="18dp" />

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>