<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="com.example.mostafaaboelnasr.attendancemanagment.fragments.SignInFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginBottom="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:text="@string/sign_in"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#fff"
                    android:textSize="24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:background="@drawable/rounded_corners"
                    android:elevation="1dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corners"
                            android:hint="@string/username"
                            android:inputType="textEmailAddress"
                            android:paddingBottom="16dp"
                            android:paddingLeft="44dp"
                            android:paddingRight="16dp"
                            android:paddingTop="16dp"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textColor="@color/colorText"
                            android:textSize="16dp">

                            <requestFocus />
                        </EditText>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/person"
                            android:tint="@color/colorTextSecondary" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@color/colorDivider" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_corners"
                            android:hint="•••••"
                            android:inputType="textPassword"
                            android:paddingBottom="16dp"
                            android:paddingLeft="44dp"
                            android:paddingRight="16dp"
                            android:paddingTop="16dp"
                            android:selectAllOnFocus="true"
                            android:singleLine="true"
                            android:textColor="@color/colorText"
                            android:textSize="16dp" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/lock"
                            android:tint="@color/colorTextSecondary" />

                    </RelativeLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginRight="36dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button"
                    android:elevation="1dp"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/play"
                        android:tint="#fff" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true" />

                    <ImageView
                        android:id="@+id/login_ok"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/darkGreen"
                        android:src="@drawable/check"
                        android:tint="#fff"
                        android:visibility="invisible" />

                    <ImageView
                        android:id="@+id/login_not_ok"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:background="@color/darkGreen"
                        android:src="@drawable/ic_close_black_24dp"
                        android:tint="#fff"
                        android:visibility="invisible" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignTop="@+id/imageView"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="#fff"
                        android:textSize="18dp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/registerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:padding="5dp"
                    android:text="@string/not_a_member_register"
                    android:textColor="@color/light"
                    android:textSize="16dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>
